project.css
#project-list {
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
    align-content: space-around;
}


.project {
    display: grid;
    grid-template-areas: "title title title"
                        "image desc desc"
                        "link desc desc";
    grid-template-columns: fr1 fr2/3;
    grid-template-rows: auto auto auto;
    min-width: 90%;
    padding-bottom: 10px;
    margin: 5%;
    background-color: var(--primary-color);
    border-radius:20px;
    box-shadow: 0 10px 20px rgba(0,0,0,0.23), 0 6px 6px rgba(0,0,0,0.28);
}

.project-title {
    grid-area: title;
    text-align: center;
    position: initial;
}

.project-link {
    grid-area: link;
    margin: auto;
    padding: 5%;
}

.project-img {
    grid-area: image;
    display: block;
    margin: auto;
    height: auto;
    width: 70%;
    border-radius: 50%;
    box-shadow: 0 10px 20px rgba(0,0,0,0.23), 0 6px 6px rgba(0,0,0,0.28);
}

.project-text {
    grid-area: desc;
    padding-right: 10%;
    line-height: 1.5rem;
}

